<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TennisMate</string>
    <string name="app_subtitle">Real-Time Tennis Scoring</string>
    <string name="footer_text">Made by Team TennisMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_match_setup">Match Setup</string>
    <string name="title_activity_history">Match History</string>
    <string name="title_activity_settings">Settings</string>

    <string name="match_title_optional">Match Title (Optional)</string>
    <string name="finals_match_hint">e.g., Wimbledon Finals</string>
    <string name="match_venue_optional">Match Venue (Optional)</string>
    <string name="enter_venue_hint">e.g., Centre Court</string>
    <string name="toss_won">Who won the toss?</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_1_name_hint">Enter Player 1 Name</string>
    <string name="player_2_name_hint">Enter Player 2 Name</string>
    <string name="match_format">Match Format</string>
    <string name="start_match">Start Match</string>

    <!-- Match Summary Screen -->
    <string name="match_summary">Match Summary</string>
    <string name="winner">Winner</string>
    <string name="player">Player</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="match_duration">Match Duration: %1$d hour %2$d minutes</string>
    <string name="share_result">Share Result</string>
    <string name="start_new_match">Start New Match</string>
    <string name="no_match_history">No match history available.</string>
    <string name="home">Home</string>
    <string name="new_match">New Match</string>
    <string name="match_history">Match History</string>
</resources>